<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mclauncher.peonlinebox.mcmultiplayer.fragment.NextFragment">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/activity_register_default"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/btn_back"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/aty_back" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/next_register"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/aty_register" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_player_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="@drawable/abc_list_selector_background_transition_holo_light" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_player_nick" />

            <EditText
                android:id="@+id/ed_player_nick"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:hint="@string/input_player_nick_hint"
                android:imeOptions="actionNext"
                android:maxLength="20"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_password_again" />

            <EditText
                android:id="@+id/ed_register_password_again"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBN,.?!@#"
                android:ellipsize="end"
                android:hint="@string/input_password_again_hint"
                android:imeOptions="actionNext"
                android:inputType="textUri|textMultiLine"
                android:maxLength="20"
                android:password="true"
                android:singleLine="true" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_register_done"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_done" />
    </LinearLayout>


</LinearLayout>

