<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mclauncher.peonlinebox.mcmultiplayer.fragment.LoginFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_account" />

        <EditText
            android:id="@+id/ed_login_account"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
            android:ellipsize="end"
            android:hint="@string/input_hint_account"
            android:imeOptions="actionNext"
            android:inputType="textUri|textMultiLine"
            android:maxLength="20"
            android:singleLine="true" />
        <TextView
            android:textColor="#ffff0000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_login_account_warn"
            android:text=""
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_password" />

        <EditText
            android:id="@+id/ed_login_password"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBN,.?!@#"
            android:ellipsize="end"
            android:hint="@string/input_hint_password"
            android:imeOptions="actionNext"
            android:inputType="textUri|textMultiLine"
            android:maxLength="20"
            android:password="true"
            android:singleLine="true" />
        <TextView
            android:textColor="#ffff0000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_login_password_warn"
            android:text=""
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_code" />

        <EditText
            android:id="@+id/ed_login_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBN"
            android:ellipsize="end"
            android:hint="@string/input_hint_code"
            android:imeOptions="actionNext"
            android:inputType="textUri|textMultiLine"
            android:maxLength="4"
            android:singleLine="true" />

        <TextView
            android:id="@+id/tv_login_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="" />
        <TextView
            android:textColor="#ffff0000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_login_code_warn"
            android:text=""
            android:visibility="gone"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register_done" />

</LinearLayout>
