<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mclauncher.peonlinebox.mcmultiplayer.RegisterActivity">

    <LinearLayout
        android:id="@+id/linear_all"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/activity_register_default"
            android:orientation="horizontal">

            <LinearLayout

                android:id="@+id/linear_close"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/aty_close" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_register"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/aty_register" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_login"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/aty_login" />

            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <FrameLayout
                android:id="@+id/frame_register"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:visibility="gone" />

            <FrameLayout
                android:id="@+id/frame_login"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:visibility="gone" />
        </FrameLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame_next"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone">

    </FrameLayout>

</FrameLayout>
