<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mclauncher.peonlinebox.mcmultiplayer.fragment.PersonalFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="150sp"
            android:layout_marginBottom="14.0dip"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_personal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/test_icon"
                android:gravity="center" />


            <FrameLayout
                android:id="@+id/linear_login"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aty_register" />

                    <Button
                        android:id="@+id/btn_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aty_login" />
                </LinearLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/linear_name"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_nick"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/nick" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14.0dip"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/relative_myServer"
                        android:layout_width="fill_parent"
                        android:layout_height="63dp"
                        android:background="@drawable/settings_list_half_selector"
                        android:clickable="true"
                        android:focusable="true">

                        <TextView
                            style="@style/settings_font_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="16.0dip"
                            android:ellipsize="end"
                            android:gravity="center_vertical"
                            android:singleLine="true"
                            android:text="@string/myServer" />

                        <ImageView
                            android:layout_width="14.0dip"
                            android:layout_height="14.0dip"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="22.0dip"
                            android:clickable="false"
                            android:src="@drawable/common_more_arrow_gray_normal" />
                    </RelativeLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/settings_font_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12.0dip"
                        android:layout_marginLeft="16.0dip"
                        android:gravity="center_vertical"
                        android:text="@string/help" />

                    <RelativeLayout
                        android:id="@+id/relative_feedback"
                        android:layout_width="fill_parent"
                        android:layout_height="63dp"
                        android:background="@drawable/settings_list_half_selector"
                        android:clickable="true"
                        android:focusable="true">

                        <TextView
                            style="@style/settings_font_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="16.0dip"
                            android:ellipsize="end"
                            android:gravity="center_vertical"
                            android:singleLine="true"
                            android:text="@string/feedback" />

                        <ImageView
                            android:layout_width="14.0dip"
                            android:layout_height="14.0dip"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="22.0dip"
                            android:clickable="false"
                            android:src="@drawable/common_more_arrow_gray_normal" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/relative_version_update"
                        android:layout_width="fill_parent"
                        android:layout_height="63dp"
                        android:background="@drawable/settings_list_half_selector"
                        android:clickable="true"
                        android:focusable="true">

                        <TextView
                            style="@style/settings_font_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="16.0dip"
                            android:ellipsize="end"
                            android:gravity="center_vertical"
                            android:singleLine="true"
                            android:text="@string/versionUpdate" />

                        <ImageView
                            android:layout_width="14.0dip"
                            android:layout_height="14.0dip"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="22.0dip"
                            android:clickable="false"
                            android:src="@drawable/common_more_arrow_gray_normal" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/relative_about"
                        android:layout_width="fill_parent"
                        android:layout_height="63dp"
                        android:background="@drawable/settings_list_half_selector"
                        android:clickable="true"
                        android:focusable="true">

                        <TextView
                            style="@style/settings_font_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="16.0dip"
                            android:ellipsize="end"
                            android:gravity="center_vertical"
                            android:singleLine="true"
                            android:text="@string/about" />

                        <ImageView
                            android:layout_width="14.0dip"
                            android:layout_height="14.0dip"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="22.0dip"
                            android:clickable="false"
                            android:src="@drawable/common_more_arrow_gray_normal" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/relative_logout"
                        android:layout_width="fill_parent"
                        android:layout_height="63dp"
                        android:background="@drawable/settings_list_half_selector"
                        android:clickable="true"
                        android:focusable="true">

                        <TextView
                            style="@style/settings_font_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="16.0dip"
                            android:ellipsize="end"
                            android:gravity="center_vertical"
                            android:singleLine="true"
                            android:text="@string/logout" />

                        <ImageView
                            android:layout_width="14.0dip"
                            android:layout_height="14.0dip"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="22.0dip"
                            android:clickable="false"
                            android:src="@drawable/common_more_arrow_gray_normal" />
                    </RelativeLayout>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>
